--- a/futebol.ipynb
+++ b/futebol.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        "4  Scotland    False  "
       ]
      },
-     "execution_count": 110,
+     "execution_count": 236,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
        "[45196 rows x 9 columns]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
        "4  1972-05-19     Thailand          Cambodia     Thailand           NaN"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +565,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
        "(562, 5)"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 245,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
        "4    False   False  "
       ]
      },
-     "execution_count": 120,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +735,7 @@
        "(43189, 8)"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -1491,7 +1491,7 @@
        "8391     NaN      False   False  "
       ]
      },
-     "execution_count": 125,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1502,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1512,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -1521,7 +1521,7 @@
        "50.0"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1534,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1558,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
@@ -1798,7 +1798,7 @@
        "[45315 rows x 11 columns]"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 255,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1814,7 +1814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
@@ -1824,7 +1824,7 @@
        "Name: vencedor, dtype: object"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 256,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1843,7 +1843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
@@ -1856,7 +1856,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 257,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1876,7 +1876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -1885,7 +1885,7 @@
        "'Romani people'"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1903,7 +1903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
@@ -1934,7 +1934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1944,7 +1944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -1971,7 +1971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
@@ -1998,7 +1998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
@@ -2250,7 +2250,7 @@
        "[34898 rows x 12 columns]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2263,7 +2263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2287,7 +2287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
@@ -2300,7 +2300,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2319,7 +2319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -2328,7 +2328,7 @@
        "'Raetia'"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 266,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2346,7 +2346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2356,21 +2356,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Silvio\\AppData\\Local\\Temp\\ipykernel_7548\\2379362894.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  penalti_batedor.loc[:, 'vencedor_b'] = penalti_batedor.apply(lambda row: 'Primeiro' if row['vencedor'] == row['primeiro_batedor'] else 'Segundo', axis=1)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -2535,20 +2523,21 @@
        "[86 rows x 6 columns]"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 268,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Identificando se o vencedor foi o primeiro ou o segundo batedor\n",
-    "penalti_batedor.loc[:, 'vencedor_b'] = penalti_batedor.apply(lambda row: 'Primeiro' if row['vencedor'] == row['primeiro_batedor'] else 'Segundo', axis=1)\n",
+    "penalti_batedor = penalti_batedor.copy()\n",
+    "penalti_batedor['vencedor_b'] = penalti_batedor.apply(lambda row: 'Primeiro' if row['vencedor'] == row['primeiro_batedor'] else 'Segundo', axis=1)\n",
     "penalti_batedor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
@@ -2589,7 +2578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -2780,7 +2769,7 @@
        "[43138 rows x 8 columns]"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 270,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2798,7 +2787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -2811,7 +2800,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2830,7 +2819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [
     {
@@ -2843,7 +2832,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 272,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2862,7 +2851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
@@ -2875,7 +2864,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 273,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2894,7 +2883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
@@ -2907,7 +2896,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2926,7 +2915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [
     {
@@ -2935,7 +2924,7 @@
        "50.0"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 275,
      "metadata": {},
      "output_type": "execute_result"
     }
